<resources>
    <string name="app_name">Symplified Point of Sale</string>
    <string name="welcome_message">Welcome to Symplified Point of Sale</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_logout_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="menu_home">Order for Customer</string>
    <string name="select_table_no">Select Table No.:</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_text">Login</string>
    <string name="production_mode_text">Switch to Production</string>
    <string name="menu_logout">Log Out</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="payment_type_failure_text">Failed to load payment types</string>

    <string name="variant_title">%1$s:</string>
    <string name="variant_option">%1$s…%2$s %3$s</string>
    <string name="add_on_group_title">%1$s (%2$s) Max. %3$d</string>
    <string name="add_on_price">+%1$s %2$s</string>
    <string name="package_group_title">Select at least %1$d of %2$d</string>

    <string name="staging_mode">Staging mode</string>
    <string name="select_payment_type">Select Payment Type:</string>
    <string name="product_image">Product Image</string>
    <string name="unit_price_label">Unit Price</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="total">Total:</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="cancel">Cancel</string>
    <string name="paid">Paid</string>

    <string name="monetary_amount">%1$s %2$s</string>
    <string name="server_label">Served by: %1$s</string>
    <string name="table_no_label">Table No. %1$s</string>
    <string name="zone_label">Zone: %1$s</string>
    <string name="hint_search">Search</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="menu_reload">Reload</string>
    <string name="custom_price">Custom Price</string>
    <string name="scan_barcode_here">Scan Barcode Here</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>

    <string name="checkout">Checkout</string>
    <string name="price_header">Price (%1$s)</string>
    <string name="total_price">Total: %1$s %2$s</string>
    <string name="item">Item</string>
    <string name="quantity">Qty</string>
    <string name="price">Price</string>
    <string name="del">Del</string>
    <string name="retry">Retry</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="place_order">Place Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>