<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="3dp"
    tools:context=".ui.main.menu_and_cart.cart.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progress_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cart_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_grey"
                android:paddingVertical="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/product_name_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item"
                    android:gravity="start"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/product_quantity_header"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/product_quantity_header"
                    android:layout_width="@dimen/cart_item_quantity_width"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/product_price_header"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/product_price_header"
                    android:layout_width="@dimen/cart_item_price_width"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/product_action_header"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/product_action_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/del"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cart_items_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@id/total_price_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cart_header"
                app:layout_constraintWidth_percent="0.80" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/total_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/payment_type_label"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/payment_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_payment_type"
                app:layout_constraintBottom_toTopOf="@id/payment_type_list"
                app:layout_constraintLeft_toLeftOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/payment_type_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/zone_no"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ProgressBar
                android:id="@+id/payment_type_progress_bar"
                style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/zone_no"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment_type_list" />

            <TextView
                android:id="@+id/payment_type_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_type_failure_text"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/payment_type_retry_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment_type_list" />

            <Button
                android:id="@+id/payment_type_retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/zone_no"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment_type_error_text" />

            <TextView
                android:id="@+id/zone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/table_no"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/table_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/server_name"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/server_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/clear_cart_button"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:id="@+id/clear_cart_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/clear_cart"
                android:layout_marginHorizontal="2dp"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toTopOf="@id/place_order_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/place_order_button"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/place_order_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/place_order"
                android:layout_marginHorizontal="2dp"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/clear_cart_button"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>